fix z-index for « my applicant files » module

--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -2231,7 +2231,7 @@ div[id^='current_'] .mod_emundus_campaign__list_content h3 {
 /* Fond formes */
 #applications_list_view table tbody tr td #background-shapes {
   position: absolute;
-  z-index: 12;
+  z-index: 10;
   width: 100%;
   height: 100%;
   top: 0;
@@ -2284,7 +2284,7 @@ div[id^='current_'] .mod_emundus_campaign__list_content h3 {
 
 /* Formes vue liste des cards */
 .em-ml-12 tbody tr td div span.label {
-  z-index: 14;
+  z-index: 10;
 }
 
 /****************************
